--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "web-vitals": "^3.1.1"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
