--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,13 +52,15 @@
         "max-len": [
             "warn",
             {
-                "code": 80
+                "code": 160
             }
         ],
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "import/prefer-default-export": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react/jsx-props-no-spreading": "off",
+        "import/no-extraneous-dependencies": "off"
     },
     "settings": {
         "import/resolver": {
