--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -16,14 +17,15 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "wouter": "^2.10.0-alpha.4"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "craco start",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "deploy": "react-scripts build && firebase deploy"
   },
   "eslintConfig": {
