--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
-    "deploy": "react-scripts build && firebase deploy"
+    "deploy": "craco build && firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
