--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "deep-equal": "^2.2.0",
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "autoprefixer": "^10.4.13",
