--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.4.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -27,8 +27,10 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
-    "deploy": "craco build && firebase deploy"
+    "deploy": "craco build && firebase deploy",
+    "start:mock": "firebase emulators:start"
   },
+  "cracoConfig": "craco.config.js",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -61,6 +63,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5"
   }
 }
