--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-use": "^17.4.0",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.1",
     "wouter": "^2.10.0-alpha.4"
