feat: edit player dialog

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "cva": "npm:class-variance-authority",
     "deep-equal": "^2.2.0",
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
