--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "react-hooks"],
+  "plugins": ["@typescript-eslint", "react-hooks"],
   "rules": {
     "no-underscore-dangle": "off",
     "no-use-before-define": "off",
@@ -51,7 +51,9 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "import/no-extraneous-dependencies": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "consistent-return": "off"
   },
   "settings": {
     "import/resolver": {
