--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-scripts": "^5.0.1",
     "react-use": "^17.4.0",
     "typescript": "^4.9.4",
