--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.45.1",
     "react-scripts": "^5.0.1",
     "react-use": "^17.4.0",
+    "recharts": "^2.7.2",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.1",
     "wouter": "^2.10.0-alpha.4"
