--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.2",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@craco/craco": "^7.1.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "cva": "npm:class-variance-authority",
-    "deep-equal": "^2.2.0",
-    "firebase": "^9.15.0",
-    "nanoid": "^4.0.0",
+    "deep-equal": "^2.2.3",
+    "firebase": "^10.5.2",
+    "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.1",
+    "react-hook-form": "^7.48.2",
     "react-scripts": "^5.0.1",
     "react-use": "^17.4.0",
-    "recharts": "^2.7.2",
-    "typescript": "^4.9.4",
-    "web-vitals": "^3.1.1",
-    "wouter": "^2.10.0-alpha.4"
+    "recharts": "^2.9.3",
+    "typescript": "^5.2.2",
+    "web-vitals": "^3.5.0",
+    "wouter": "^2.12.1"
   },
   "scripts": {
     "dev": "craco start",
@@ -51,23 +51,23 @@
     ]
   },
   "devDependencies": {
-    "@types/deep-equal": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
+    "@types/deep-equal": "^1.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.2",
-    "tailwindcss": "^3.2.4",
-    "ts-jest": "^29.0.5"
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
+    "ts-jest": "^29.1.1"
   }
 }
