chore: migrate from cra to vite

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.1.1",
     "cva": "npm:class-variance-authority",
     "deep-equal": "^2.2.3",
     "firebase": "^10.5.2",
@@ -18,20 +19,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-scripts": "^5.0.1",
     "react-use": "^17.4.0",
     "recharts": "^2.9.3",
     "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-tsconfig-paths": "^4.2.1",
     "web-vitals": "^3.5.0",
     "wouter": "^2.12.1"
   },
   "scripts": {
-    "dev": "craco start",
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject",
-    "deploy": "craco build && firebase deploy",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
     "start:mock": "firebase emulators:start"
   },
   "cracoConfig": "craco.config.js",
