--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "name": "hkmleague",
-  "version": "0.1.0",
+  "name": "hkmjbs",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "cva": "npm:class-variance-authority",
+    "deep-equal": "^2.2.3",
+    "nanoid": "^5.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-use": "^17.4.0",
+    "web-vitals": "^3.5.0",
+    "wouter": "^2.12.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2",
+    "firebase": "^10.5.2",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
@@ -11,20 +24,26 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
-    "cva": "npm:class-variance-authority",
-    "deep-equal": "^2.2.3",
-    "firebase": "^10.5.2",
-    "nanoid": "^5.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-use": "^17.4.0",
-    "recharts": "^2.9.3",
-    "typescript": "^5.2.2",
+    "@types/deep-equal": "^1.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
+    "ts-jest": "^29.1.1",
     "vite": "^4.5.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "web-vitals": "^3.5.0",
-    "wouter": "^2.12.1"
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "scripts": {
     "dev": "vite",
@@ -48,25 +67,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/deep-equal": "^1.0.4",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.5",
-    "ts-jest": "^29.1.1"
   }
 }
