--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_GOOGLE_DRIVE_API_KEY=AIzaSyC7KJIuaklIdqAKSEyoxr-_aJuEiZCWaiQ
+
+VITE_IMGUR_CLIENT_ID=6c65de36fe2a506
+VITE_IMGUR_API_KEY=87d72ff33afd8692c44b8bc013ad38293056c54b
+VITE_IMGUR_ALBUM_ID=o2qeHx9
