--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@sanity/client": "^6.9.1",
+    "@tanstack/react-query": "^5.12.2",
     "@uiw/react-color-sketch": "^2.0.3",
     "cva": "npm:class-variance-authority",
     "deep-equal": "^2.2.3",
@@ -15,6 +17,7 @@
     "wouter": "^2.12.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.12.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
