--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@sanity/client": "^6.9.1",
     "@tanstack/react-query": "^5.12.2",
     "@uiw/react-color-sketch": "^2.0.3",
+    "classnames": "^2.5.1",
     "cva": "npm:class-variance-authority",
     "deep-equal": "^2.2.3",
     "nanoid": "^5.0.3",
