--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deep-equal": "^2.2.3",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
+    "@hello-pangea/dnd": "^16.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-use": "^17.4.0",
