feat: updates for summary and weekly-summary

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ VITE_IMGUR_ALBUM_ID=o2qeHx9
 
 VITE_HOMEPAGE_HOST=https://hkleague2024.hkmahjong.org
 VITE_CMS_HOST=https://hkmjbs.sanity.studio
+
+VITE_TOURNAMENT_ID=b6908027-9179-485a-8bce-822c42114371
