--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
     "@sanity/client": "^6.9.1",
     "@tanstack/react-query": "^5.12.2",
     "@uiw/react-color-sketch": "^2.0.3",
@@ -11,10 +12,10 @@
     "deep-equal": "^2.2.3",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
-    "@hello-pangea/dnd": "^16.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-use": "^17.4.0",
+    "recharts": "^2.10.4",
     "web-vitals": "^3.5.0",
     "wouter": "^2.12.1"
   },
