--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.49.3",
     "react-use": "^17.5.0",
     "recharts": "^2.10.4",
+    "vitest": "^1.2.1",
     "web-vitals": "^3.5.1",
     "wouter": "^2.12.1"
   },
@@ -50,7 +51,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start:mock": "firebase emulators:start"
+    "start:mock": "firebase emulators:start",
+    "test": "vitest"
   },
   "cracoConfig": "craco.config.js",
   "eslintConfig": {
