--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "wouter": "^2.12.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/eslint-plugin-query": "^5.17.20",
     "@testing-library/jest-dom": "^6.2.1",
     "@testing-library/react": "^14.1.2",
@@ -33,14 +34,13 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "firebase": "^10.7.2",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.4",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
