--- a/package.json
+++ b/package.json
@@ -3,48 +3,51 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@hello-pangea/dnd": "^16.5.0",
-    "@sanity/client": "^6.11.1",
-    "@tanstack/react-query": "^5.17.19",
-    "@uiw/react-color-sketch": "^2.0.6",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@sanity/client": "^6.29.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.74.4",
+    "@uiw/react-color-sketch": "^2.5.0",
     "classnames": "^2.5.1",
     "cva": "npm:class-variance-authority",
+    "daisyui": "^5.0.27",
     "deep-equal": "^2.2.3",
-    "nanoid": "^5.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
-    "react-use": "^17.5.0",
-    "recharts": "^2.10.4",
-    "vitest": "^1.2.1",
-    "web-vitals": "^3.5.1",
-    "wouter": "^2.12.1"
+    "nanoid": "^5.1.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.0",
+    "react-use": "^17.6.0",
+    "recharts": "^2.15.3",
+    "vitest": "^3.1.1",
+    "web-vitals": "^4.2.4",
+    "wouter": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
-    "@tanstack/eslint-plugin-query": "^5.17.20",
-    "@testing-library/jest-dom": "^6.2.1",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.2",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/deep-equal": "^1.0.4",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "firebase": "^10.7.2",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "firebase": "^11.6.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.4",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vite-tsconfig-paths": "^4.3.1"
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.2",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
     "dev": "vite",
