--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@hookform/resolvers": "^5.0.1",
     "@sanity/client": "^6.29.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.74.4",
     "@uiw/react-color-sketch": "^2.5.0",
+    "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "cva": "npm:class-variance-authority",
     "daisyui": "^5.0.27",
@@ -17,11 +19,13 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.0",
+    "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
     "recharts": "^2.15.3",
     "vitest": "^3.1.1",
     "web-vitals": "^4.2.4",
-    "wouter": "^3.7.0"
+    "wouter": "^3.7.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
