--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cva": "npm:class-variance-authority",
     "daisyui": "^5.0.27",
     "deep-equal": "^2.2.3",
+    "groqd": "^1.4.0",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,7 +26,7 @@
     "vitest": "^3.1.1",
     "web-vitals": "^4.2.4",
     "wouter": "^3.7.0",
-    "yup": "^1.6.1"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
