--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@eslint/compat": "^1.2.8",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@sanity-image/url-builder": "^1.0.0",
@@ -15,17 +16,18 @@
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "cva": "npm:class-variance-authority",
-    "daisyui": "^5.0.27",
+    "daisyui": "^5.0.28",
     "deep-equal": "^2.2.3",
     "groqd": "^1.4.0",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.0",
+    "react-hook-form": "^7.56.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
     "recharts": "^2.15.3",
-    "vitest": "^3.1.1",
+    "vitest": "^3.1.2",
     "web-vitals": "^4.2.4",
     "wouter": "^3.7.0",
     "zod": "^3.24.3"
@@ -41,19 +43,19 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "@typescript-eslint/parser": "^8.30.1",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "firebase": "^11.6.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "firebase": "^11.6.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.4",
     "ts-jest": "^29.3.2",
     "typescript": "^5.8.3",
-    "vite": "^6.3.2",
+    "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
