--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ VITE_HOMEPAGE_HOST=https://hkleague2025.hkmahjong.org
 VITE_CMS_HOST=https://hkmjbs.sanity.studio
 
 VITE_TOURNAMENT_ID=62e7d07d-f59f-421d-a000-2e4d28ab89db
+VITE_OBS_ROOM_ID=1
