--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ VITE_IMGUR_CLIENT_ID=6c65de36fe2a506
 VITE_IMGUR_API_KEY=87d72ff33afd8692c44b8bc013ad38293056c54b
 VITE_IMGUR_ALBUM_ID=o2qeHx9
 
-VITE_HOMEPAGE_HOST=http://localhost:3000
+VITE_HOMEPAGE_HOST=https://sakura2025.hkmahjong.org
 VITE_CMS_HOST=https://hkmjbs.sanity.studio
 
 VITE_TOURNAMENT_ID=62e7d07d-f59f-421d-a000-2e4d28ab89db
